<resources>
    <string name="app_name">Friends Tracker</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="add_new_meeting">Add New Meeting</string>
    <string name="location">Location: </string>
    <string name="meeting_start_time">Start Time: </string>
    <string name="meeting_end_time">End Time: </string>
    <string name="email_label">Email: </string>
    <string name="dob_label">Date of birth: </string>
    <string name="meeting_date">Date: </string>
    <string name="meeting_title">Title: </string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="sort_by_date_desc">Sort: Date (Descending)</string>
    <string name="sort_by_date_ascending">Sort: Date (Ascending)</string>
    <string name="attendees">Attendees: </string>
    <string name="no_friend_added_meeting">No Friends Added To Meeting</string>
    <string name="managet_attendees">Manage Attendees</string>
    <string name="latitude">Latitude: </string>
    <string name="longitude">Longitude: </string>
    <string name="dismiss">DIMISS</string>
    <string name="cancel_caps">CANCEL</string>
    <string name="snooze">SNOOZE</string>
    <string-array name="minutes">
        <item>1 Minute</item>
        <item>2 Minutes</item>
        <item>3 Minutes</item>
        <item>4 Minutes</item>
        <item>5 Minutes</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="loc">Location</string>
</resources>
