<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.abubakar.friendstracker.Controller.EditMeetingActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/editMeetingTitleLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/meeting_title"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/editMeetingTitleED"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline1"
            android:layout_marginRight="16dp"
            app:layout_constraintHorizontal_bias="0.0" />

        <TextView
            android:id="@+id/editMeetingLocationLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/location"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/editMeetingLocation"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline1"
            android:layout_marginRight="16dp"
            app:layout_constraintHorizontal_bias="0.0" />

        <TextView
            android:id="@+id/editMeetingDateLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/meeting_date"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/editMeetingDate"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline1"
            android:layout_marginRight="16dp"
            app:layout_constraintHorizontal_bias="0.0" />

        <TextView
            android:id="@+id/editMeetingStartTimeTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/meeting_start_time"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/editMeetingStartTime"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline1"
            android:layout_marginRight="16dp"
            app:layout_constraintHorizontal_bias="0.0" />

        <TextView
            android:id="@+id/editMeetingEndTimeLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/meeting_end_time"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/editMeetingEndTime"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline1"
            android:layout_marginRight="16dp"
            app:layout_constraintHorizontal_bias="0.0" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

        <EditText
            android:id="@+id/editMeetingTitleED"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintLeft_toLeftOf="@+id/guideline1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editMeetingLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintLeft_toLeftOf="@+id/guideline1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editMeetingTitleED" />

        <EditText
            android:id="@+id/editMeetingDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="textPersonName"
            app:layout_constraintLeft_toLeftOf="@+id/guideline1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editMeetingLocation" />

        <EditText
            android:id="@+id/editMeetingStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="textPersonName"
            app:layout_constraintLeft_toLeftOf="@+id/guideline1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editMeetingDate" />

        <EditText
            android:id="@+id/editMeetingEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="textPersonName"
            app:layout_constraintLeft_toLeftOf="@+id/guideline1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editMeetingStartTime" />

        <Button
            android:id="@+id/btn_cancelEditMeetingSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:text="@string/cancel"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn_saveAddMeeting"
            app:layout_constraintRight_toLeftOf="@+id/btn_saveAddMeeting" />

        <Button
            android:id="@+id/btn_saveAddMeeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:text="@string/save"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/editMeetingEndTime" />
    </android.support.constraint.ConstraintLayout>

</ScrollView>
