<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.abubakar.friendstracker.Controller.AddMeeting">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/addMeetingTitleLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/meeting_title"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/addMeetingTitleED"
            app:layout_constraintRight_toLeftOf="@+id/guideline1"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.0" />

        <TextView
            android:id="@+id/addNewMeetingLocationLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/addMeetingLocation"
            app:layout_constraintRight_toLeftOf="@+id/guideline1"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/addMeetingDateLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/meeting_date"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/addMeetingDate"
            app:layout_constraintRight_toLeftOf="@+id/guideline1"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/addMeetingStartTImeLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/meeting_start_time"
            android:textStyle="bold"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/addMeetingStartTime"
            app:layout_constraintRight_toLeftOf="@+id/guideline1"
            android:layout_marginRight="8dp" />

        <TextView
            android:id="@+id/addMeetingEndTimeLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/meeting_end_time"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/addMeetingEndTime"
            app:layout_constraintRight_toLeftOf="@+id/guideline1"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.0" />

        <TextView
            android:id="@+id/addMeetingFriendsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attendees"
            android:textStyle="bold"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline1"
            android:layout_marginRight="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_attendees"
            app:layout_constraintHorizontal_bias="0.0" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="115dp" />

        <EditText
            android:id="@+id/addMeetingTitleED"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/guideline1" />

        <EditText
            android:id="@+id/addMeetingLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/addMeetingTitleED"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/guideline1" />

        <EditText
            android:id="@+id/addMeetingDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="textPersonName"
            android:layout_marginTop="7dp"
            app:layout_constraintTop_toBottomOf="@+id/addMeetingLocation"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/guideline1" />

        <EditText
            android:id="@+id/addMeetingStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="textPersonName"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/addMeetingDate"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/guideline1" />

        <EditText
            android:id="@+id/addMeetingEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="textPersonName"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/addMeetingStartTime"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/guideline1" />

        <Button
            android:id="@+id/btn_cancelNewMeetingSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn_saveAddMeeting"
            app:layout_constraintRight_toLeftOf="@+id/btn_saveAddMeeting"
            android:layout_marginRight="8dp" />

        <Button
            android:id="@+id/btn_saveAddMeeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_attendees"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btn_addFriendsToMeeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Manage Attendees"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn_cancelNewMeetingSave"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/tv_attendees"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="18sp"
            app:layout_constraintWidth_default="wrap"
            android:layout_marginTop="14dp"
            android:padding="2dp"
            app:layout_constraintTop_toBottomOf="@+id/addMeetingEndTime"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/addMeetingEndTime"
            android:layout_marginRight="0dp"
            app:layout_constraintRight_toRightOf="@+id/addMeetingEndTime"
            app:layout_constraintHorizontal_bias="0.0" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>