<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/not_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/imageView3"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/meeting_not_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintLeft_toRightOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/not_title" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_planner"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/dismiss_not"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/meeting_not_message">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="26dp"
            android:layout_height="26dp"
            app:srcCompat="@drawable/icon_dismiss" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dismiss" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/snooze_not"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        app:layout_constraintLeft_toRightOf="@+id/cancel_not"
        app:layout_constraintTop_toBottomOf="@+id/meeting_not_message">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/icon_snooze" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/snooze" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cancel_not"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="31dp"
        android:gravity="center"
        app:layout_constraintLeft_toRightOf="@+id/dismiss_not"
        app:layout_constraintTop_toBottomOf="@+id/meeting_not_message">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/icon_delete" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_caps" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>